--- a/coast.html
+++ b/coast.html
@@ -15,5 +15,10 @@
             <li><a href="coast.html">Coast</a></li>
         </ul>
     </nav>
+    <section>
+        <figure>
+            <img src="assets/images/beach.jpg" alt="An image of Coastal Dublin">
+        </figure>
+    </section>
 </body>
 </html>
